eck-llm/fleet-quickstart/ingress-kibana.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apm-ingress
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
  - host: apm.${domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: apm-server-apm-http
            port:
              number: 8200
  tls:
  - hosts:
    - "*.sslip.io"
    secretName: wildcard-tls-secret
